After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773107 - audioencoder: Plug buffer-leak
audioencoder: Plug buffer-leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-17 14:02 UTC by Stian Selnes (stianse)
Modified: 2016-10-31 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
audioencoder: Plug buffer-leak (805 bytes, patch)
2016-10-17 14:02 UTC, Stian Selnes (stianse)
committed Details | Review

Description Stian Selnes (stianse) 2016-10-17 14:02:05 UTC
See patch, fix leak.
Comment 1 Stian Selnes (stianse) 2016-10-17 14:02:09 UTC
Created attachment 337858 [details] [review]
audioencoder: Plug buffer-leak
Comment 2 Sebastian Dröge (slomo) 2016-10-20 11:10:02 UTC
Attachment 337858 [details] pushed as 63c1f4a - audioencoder: Plug buffer-leak