audioencoder: Plug buffer-leak

https://bugzilla.gnome.org/show_bug.cgi?id=773107